<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/itemTrangChu"
        android:title="@string/trangchu"
        android:icon="@drawable/home"
        android:checked="false"

        />
    <item
        android:id="@+id/itemTraMuon"
        android:title="@string/qlmuonsach"
        android:icon="@drawable/borrowbook"
        android:checked="false"

        />
    <item
        android:id="@+id/itemSach"
        android:title="@string/Quanlisach"
        android:icon="@drawable/returnbook"

        />
    <item
        android:id="@+id/itemDocGia"
        android:title="@string/DocGia"
        android:icon="@drawable/list"

        />
    <item
        android:id="@+id/itemGioiThieu"
        android:title="@string/gioithieu"
        android:icon="@drawable/aboutt"
        />
        <item
            android:id="@+id/itemExit"
            android:title="@string/exit"
            android:icon="@drawable/exit"
            />
    </group>
</menu>